force-app/main/default/objects/Individual_Support_Note__c/Individual_Support_Note__c.object-meta.xml
<CustomObject>
    <description>The support note entered by advisor and advisee for student wellness module.</description>
    <label>Individual Support Note</label>
    <nameField>
        <label>Note Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Support Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>