force-app/main/default/objects/Individual_Support_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Support Notes</relationshipLabel>
    <relationshipName>Individual_Support_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>