force-app/main/default/objects/Individual_Support_Note__c/fields/Individual_Success_Plan__c.field-meta.xml
<CustomField>
    <fullName>Individual_Success_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Success Plan</label>
    <referenceTo>Individual_Success_Plan__c</referenceTo>
    <relationshipLabel>Individual Support Notes</relationshipLabel>
    <relationshipName>Individual_Support_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>