force-app/main/default/objects/Individual_Support_Note__c/fields/Note_Category__c.field-meta.xml
<CustomField>
    <fullName>Note_Category__c</fullName>
    <label>Note Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
                <default>true</default>
                <label>Academic</label>
            </value>
            <value>
                <fullName>Wellbeing</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>