force-app/main/default/objects/Individual_Support_Note__c/fields/Note_Content__c.field-meta.xml
<CustomField>
    <fullName>Note_Content__c</fullName>
    <label>Note Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>