force-app/main/default/objects/Individual_Support_Note__c/fields/Privacy_Level__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Level__c</fullName>
    <label>Privacy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confidential</fullName>
                <default>true</default>
                <label>Confidential</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>