force-app/main/default/objects/Individual_Support_Note__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>